--- a/SmarkPark/SmarkPark/Controller/Mine/MineWalletViewController.xib
+++ b/SmarkPark/SmarkPark/Controller/Mine/MineWalletViewController.xib
@@ -13,6 +13,7 @@
             <connections>
                 <outlet property="bgView" destination="bXJ-r4-IN2" id="lUj-Y0-YNU"/>
                 <outlet property="cashDetailBtn" destination="tsf-Op-OdD" id="6Y1-we-3ww"/>
+                <outlet property="pubBtn" destination="22A-dS-6V0" id="rQ8-xh-4sO"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outlet property="wallet" destination="b9i-9h-ofZ" id="DRT-hW-t2Z"/>
             </connections>
@@ -23,25 +24,25 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bXJ-r4-IN2">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="300"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="280"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mine_cash" translatesAutoresizingMaskIntoConstraints="NO" id="jRI-mY-dIv">
-                            <rect key="frame" x="157.5" y="30" width="60" height="60"/>
+                            <rect key="frame" x="152.5" y="30" width="70" height="70"/>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b9i-9h-ofZ">
-                            <rect key="frame" x="146" y="110" width="84" height="48"/>
+                            <rect key="frame" x="146" y="100" width="84" height="48"/>
                             <fontDescription key="fontDescription" type="system" pointSize="40"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="积分" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AAp-Lz-LJi">
-                            <rect key="frame" x="235" y="140" width="31" height="18"/>
+                            <rect key="frame" x="235" y="120" width="31" height="18"/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tsf-Op-OdD">
-                            <rect key="frame" x="147" y="198" width="80" height="29"/>
+                            <rect key="frame" x="147" y="188" width="80" height="29"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="80" id="LhF-dB-dCT"/>
                             </constraints>
@@ -54,32 +55,64 @@
                                     <integer key="value" value="3"/>
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
+                            <connections>
+                                <action selector="scoreDetail:" destination="-1" eventType="touchUpInside" id="qfz-t0-oYC"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstItem="tsf-Op-OdD" firstAttribute="centerX" secondItem="bXJ-r4-IN2" secondAttribute="centerX" id="3WJ-kL-1ND"/>
-                        <constraint firstItem="AAp-Lz-LJi" firstAttribute="bottom" secondItem="b9i-9h-ofZ" secondAttribute="bottom" id="70d-hH-Rrj"/>
-                        <constraint firstAttribute="height" constant="300" id="80f-dQ-BQI"/>
-                        <constraint firstItem="jRI-mY-dIv" firstAttribute="centerX" secondItem="bXJ-r4-IN2" secondAttribute="centerX" id="93W-oh-7TV"/>
+                        <constraint firstItem="AAp-Lz-LJi" firstAttribute="bottom" secondItem="b9i-9h-ofZ" secondAttribute="bottom" constant="-10" id="70d-hH-Rrj"/>
                         <constraint firstItem="tsf-Op-OdD" firstAttribute="top" secondItem="b9i-9h-ofZ" secondAttribute="bottom" constant="40" id="H5K-zV-jFZ"/>
-                        <constraint firstItem="b9i-9h-ofZ" firstAttribute="top" secondItem="jRI-mY-dIv" secondAttribute="bottom" constant="20" id="VHb-99-EJR"/>
+                        <constraint firstItem="jRI-mY-dIv" firstAttribute="centerX" secondItem="bXJ-r4-IN2" secondAttribute="centerX" id="PBJ-le-hWT"/>
+                        <constraint firstItem="b9i-9h-ofZ" firstAttribute="top" secondItem="jRI-mY-dIv" secondAttribute="bottom" id="VHb-99-EJR"/>
+                        <constraint firstAttribute="height" constant="280" id="XZ7-hp-pf1"/>
                         <constraint firstItem="b9i-9h-ofZ" firstAttribute="centerX" secondItem="bXJ-r4-IN2" secondAttribute="centerX" id="khc-4q-Yq1"/>
                         <constraint firstItem="AAp-Lz-LJi" firstAttribute="leading" secondItem="b9i-9h-ofZ" secondAttribute="trailing" constant="5" id="uji-Yq-d9t"/>
                         <constraint firstItem="jRI-mY-dIv" firstAttribute="top" secondItem="bXJ-r4-IN2" secondAttribute="top" constant="30" id="xaY-mJ-cap"/>
                     </constraints>
                 </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="发布车位，并成功交易可赚取积分" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nda-l1-iwh">
+                    <rect key="frame" x="95" y="300" width="184" height="14.5"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="22A-dS-6V0">
+                    <rect key="frame" x="137" y="324.5" width="100" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="VQV-pv-gXx"/>
+                        <constraint firstAttribute="width" constant="100" id="WBP-4x-iun"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <state key="normal" title="现在发布">
+                        <color key="titleColor" red="0.0078431372550000003" green="0.67843137249999996" blue="0.3411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </state>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <integer key="value" value="3"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                    <connections>
+                        <action selector="pubBtn:" destination="-1" eventType="touchUpInside" id="4Wn-E2-Zf7"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="nda-l1-iwh" firstAttribute="top" secondItem="bXJ-r4-IN2" secondAttribute="bottom" constant="20" id="4sa-e0-uqr"/>
                 <constraint firstItem="bXJ-r4-IN2" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="54C-ZY-w7f"/>
                 <constraint firstAttribute="trailing" secondItem="bXJ-r4-IN2" secondAttribute="trailing" id="DS9-s6-SC9"/>
+                <constraint firstItem="nda-l1-iwh" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="H1S-Gc-Fvr"/>
                 <constraint firstItem="bXJ-r4-IN2" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="Vcm-qG-DpI"/>
+                <constraint firstItem="22A-dS-6V0" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="hxR-0Q-g2C"/>
+                <constraint firstItem="22A-dS-6V0" firstAttribute="top" secondItem="nda-l1-iwh" secondAttribute="bottom" constant="10" id="kN8-0i-Nyy"/>
             </constraints>
             <point key="canvasLocation" x="73.5" y="-40.5"/>
         </view>
     </objects>
     <resources>
-        <image name="mine_cash" width="60" height="60"/>
+        <image name="mine_cash" width="70" height="70"/>
     </resources>
 </document>
