--- a/SmarkPark/SmarkPark/Controller/Mine/MineCarMsgViewController.xib
+++ b/SmarkPark/SmarkPark/Controller/Mine/MineCarMsgViewController.xib
@@ -1,13 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MineCarMsgViewController">
             <connections>
+                <outlet property="addBtn" destination="aOD-AG-eXb" id="S7A-hN-1wB"/>
+                <outlet property="tableView" destination="Bdj-Do-Luf" id="W2b-VJ-cn5"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -15,8 +21,47 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SFf-ho-Cfg">
+                    <rect key="frame" x="0.0" y="617" width="375" height="50"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aOD-AG-eXb">
+                            <rect key="frame" x="30" y="10" width="315" height="30"/>
+                            <state key="normal" title="添加车辆">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                    <integer key="value" value="5"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="CnE-69-fcq"/>
+                        <constraint firstItem="aOD-AG-eXb" firstAttribute="leading" secondItem="SFf-ho-Cfg" secondAttribute="leading" constant="30" id="ETi-uK-31k"/>
+                        <constraint firstItem="aOD-AG-eXb" firstAttribute="centerY" secondItem="SFf-ho-Cfg" secondAttribute="centerY" id="OHE-g2-iah"/>
+                        <constraint firstAttribute="trailing" secondItem="aOD-AG-eXb" secondAttribute="trailing" constant="30" id="hbI-WS-Wgy"/>
+                    </constraints>
+                </view>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Bdj-Do-Luf">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="617"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                </tableView>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="Bdj-Do-Luf" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="4W6-SO-zbb"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="Bdj-Do-Luf" secondAttribute="trailing" id="JhK-SM-fdu"/>
+                <constraint firstItem="SFf-ho-Cfg" firstAttribute="top" secondItem="Bdj-Do-Luf" secondAttribute="bottom" id="Ou2-Ar-snp"/>
+                <constraint firstItem="SFf-ho-Cfg" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="dcC-Rh-OXz"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="SFf-ho-Cfg" secondAttribute="trailing" id="prz-Nw-97t"/>
+                <constraint firstItem="SFf-ho-Cfg" firstAttribute="bottom" secondItem="Q5M-cg-NOt" secondAttribute="bottom" id="xMN-Ke-pAa"/>
+                <constraint firstItem="Bdj-Do-Luf" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="z6k-sZ-RPA"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
+            <point key="canvasLocation" x="34.5" y="54.5"/>
         </view>
     </objects>
 </document>
