--- a/SmarkPark/SmarkPark/Controller/Mine/MineCarMsgViewController.xib
+++ b/SmarkPark/SmarkPark/Controller/Mine/MineCarMsgViewController.xib
@@ -26,7 +26,10 @@
                     <rect key="frame" x="0.0" y="617" width="375" height="50"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aOD-AG-eXb">
-                            <rect key="frame" x="30" y="10" width="315" height="30"/>
+                            <rect key="frame" x="30" y="5" width="315" height="40"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="40" id="XRQ-yB-0Pc"/>
+                            </constraints>
                             <state key="normal" title="添加车辆">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
@@ -34,7 +37,11 @@
                                 <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                     <integer key="value" value="5"/>
                                 </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                             </userDefinedRuntimeAttributes>
+                            <connections>
+                                <action selector="addBtnClick:" destination="-1" eventType="touchUpInside" id="jTE-WI-l1Z"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
